@@ -1857,7 +1857,7 @@ public class XmlParser {
         template.sendingName = displayAlertName;
 
         // Get reference rule for common fields (use first rule from first state)
-        Rule refRule = sendByState.values().iterator().next().get(0);
+        Rule refRule = sendByState.values().iterator().next().getFirst();
         template.deviceA = mapComponent(refRule.component);
 
         // Set initial timing (T1) based on CREATE rules
@@ -1879,7 +1879,7 @@ public class XmlParser {
 
             if (sendRules != null && !sendRules.isEmpty()) {
                 // Use first rule for this state
-                Rule sendRule = sendRules.get(0);
+                Rule sendRule = sendRules.getFirst();
                 String recipient = extractDestination(sendRule);
                 setRecipient(template, i + 1, recipient, sendRule.roleFromView);
 
@@ -2748,14 +2748,14 @@ public class XmlParser {
                 .count();
         int totalCfgs = nurseCfgs + clinicalCfgs + ordersCfgs;
 
-        return String.format(
+        return (
             "✅ XML Load Complete%n%n" +
-            "Loaded:%n" +
-            "  • %d Unit rows%n" +
-            "  • %d Nurse Call rows%n" +
-            "  • %d Clinical rows%n" +
-            "  • %d Orders rows%n" +
-            "  • Config Groups: %d (Nurse), %d (Clinical), %d (Orders) — Total %d",
+                "Loaded:%n" +
+                "  • %d Unit rows%n" +
+                "  • %d Nurse Call rows%n" +
+                "  • %d Clinical rows%n" +
+                "  • %d Orders rows%n" +
+                "  • Config Groups: %d (Nurse), %d (Clinical), %d (Orders) — Total %d").formatted(
             units.size(), nurseCalls.size(), clinicals.size(), orders.size(),
             nurseCfgs, clinicalCfgs, ordersCfgs, totalCfgs
         );
