@@ -87,15 +87,16 @@ class XmlParserRoleExtractionTest {
         parser.load(xmlFile);
         
         assertEquals(1, parser.getClinicals().size(), "Should have 1 clinical alert");
-        ExcelParserV5.FlowRow flow = parser.getClinicals().get(0);
+        ExcelParserV5.FlowRow flow = parser.getClinicals().getFirst();
         
         // Verify ALL roles are captured, formatted with VAssign:[Room] prefix and separated by newlines
-        String expected = "VAssign:[Room] PCT\n" +
-                         "VAssign:[Room] TECH\n" +
-                         "VAssign:[Room] RN\n" +
-                         "VAssign:[Room] Registered Nurse\n" +
-                         "VAssign:[Room] CHARGE\n" +
-                         "VAssign:[Room] Charge Nurse";
+        String expected = """
+                         VAssign:[Room] PCT
+                         VAssign:[Room] TECH
+                         VAssign:[Room] RN
+                         VAssign:[Room] Registered Nurse
+                         VAssign:[Room] CHARGE
+                         VAssign:[Room] Charge Nurse""";
         assertEquals(expected, flow.r1, 
             "All comma-separated role values should be captured when path ends with 'role.name' and relation is 'in'");
         
@@ -171,7 +172,7 @@ class XmlParserRoleExtractionTest {
         parser.load(xmlFile);
         
         assertEquals(1, parser.getClinicals().size(), "Should have 1 clinical alert");
-        ExcelParserV5.FlowRow flow = parser.getClinicals().get(0);
+        ExcelParserV5.FlowRow flow = parser.getClinicals().getFirst();
         
         // Verify exclusion notation is used
         String expected = "AllRoles_except_PCT,TECH";
@@ -247,7 +248,7 @@ class XmlParserRoleExtractionTest {
         parser.load(xmlFile);
         
         assertEquals(1, parser.getClinicals().size(), "Should have 1 clinical alert");
-        ExcelParserV5.FlowRow flow = parser.getClinicals().get(0);
+        ExcelParserV5.FlowRow flow = parser.getClinicals().getFirst();
         
         // Should only use "Nurse" from the filter value, not "RN and PCT" from view name/description
         String expected = "VAssign:[Room] Nurse";
@@ -324,7 +325,7 @@ class XmlParserRoleExtractionTest {
         parser.load(xmlFile);
         
         assertEquals(1, parser.getClinicals().size(), "Should have 1 clinical alert");
-        ExcelParserV5.FlowRow flow = parser.getClinicals().get(0);
+        ExcelParserV5.FlowRow flow = parser.getClinicals().getFirst();
         
         // Verify ALL roles are captured with "equal" relation
         String expected = "VAssign:[Room] RN\nVAssign:[Room] Charge Nurse";
