@@ -24,42 +24,43 @@ class XmlParserSettingsTest {
         File xmlFile = tempDir.resolve("test.xml").toFile();
         
         // Create test XML with displayValues
-        String xmlContent = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-            "<package version-major=\"1\" version-minor=\"0\">\n" +
-            "  <contents>\n" +
-            "    <datasets>\n" +
-            "      <dataset active=\"true\">\n" +
-            "        <name>Clinicals</name>\n" +
-            "        <view>\n" +
-            "          <name>Test_View</name>\n" +
-            "          <filter relation=\"in\">\n" +
-            "            <path>alert_type</path>\n" +
-            "            <value>APNEA</value>\n" +
-            "          </filter>\n" +
-            "        </view>\n" +
-            "      </dataset>\n" +
-            "    </datasets>\n" +
-            "    <interfaces>\n" +
-            "      <interface component=\"DataUpdate\">\n" +
-            "        <rule active=\"true\" dataset=\"Clinicals\">\n" +
-            "          <purpose>CREATE TRIGGER | APNEA</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "      <interface component=\"VMP\">\n" +
-            "        <rule active=\"true\" dataset=\"Clinicals\">\n" +
-            "          <purpose>SEND PRIMARY | APNEA | VMP</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "          <settings>{\"destination\":\"test\",\"priority\":\"2\",\"ttl\":10," +
-            "\"enunciate\":\"SYSTEM_DEFAULT\",\"overrideDND\":false," +
-            "\"displayValues\":[\"Acknowledge\",\"Escalate\"]}</settings>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "    </interfaces>\n" +
-            "  </contents>\n" +
-            "</package>";
+        String xmlContent = """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <package version-major="1" version-minor="0">
+              <contents>
+                <datasets>
+                  <dataset active="true">
+                    <name>Clinicals</name>
+                    <view>
+                      <name>Test_View</name>
+                      <filter relation="in">
+                        <path>alert_type</path>
+                        <value>APNEA</value>
+                      </filter>
+                    </view>
+                  </dataset>
+                </datasets>
+                <interfaces>
+                  <interface component="DataUpdate">
+                    <rule active="true" dataset="Clinicals">
+                      <purpose>CREATE TRIGGER | APNEA</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                    </rule>
+                  </interface>
+                  <interface component="VMP">
+                    <rule active="true" dataset="Clinicals">
+                      <purpose>SEND PRIMARY | APNEA | VMP</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                      <settings>{"destination":"test","priority":"2","ttl":10,\
+            "enunciate":"SYSTEM_DEFAULT","overrideDND":false,\
+            "displayValues":["Acknowledge","Escalate"]}</settings>
+                    </rule>
+                  </interface>
+                </interfaces>
+              </contents>
+            </package>""";
         
         try (FileWriter writer = new FileWriter(xmlFile)) {
             writer.write(xmlContent);
@@ -71,7 +72,7 @@ class XmlParserSettingsTest {
         List<ExcelParserV5.FlowRow> clinicals = parser.getClinicals();
         assertEquals(1, clinicals.size(), "Should have 1 clinical row");
         
-        ExcelParserV5.FlowRow flow = clinicals.get(0);
+        ExcelParserV5.FlowRow flow = clinicals.getFirst();
         
         // Verify response options were extracted
         assertEquals("Acknowledge,Escalate", flow.responseOptions,
@@ -83,41 +84,42 @@ class XmlParserSettingsTest {
         File xmlFile = tempDir.resolve("test.xml").toFile();
         
         // Create test XML with enunciate field
-        String xmlContent = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-            "<package version-major=\"1\" version-minor=\"0\">\n" +
-            "  <contents>\n" +
-            "    <datasets>\n" +
-            "      <dataset active=\"true\">\n" +
-            "        <name>NurseCalls</name>\n" +
-            "        <view>\n" +
-            "          <name>Test_View</name>\n" +
-            "          <filter relation=\"in\">\n" +
-            "            <path>alert_type</path>\n" +
-            "            <value>Call</value>\n" +
-            "          </filter>\n" +
-            "        </view>\n" +
-            "      </dataset>\n" +
-            "    </datasets>\n" +
-            "    <interfaces>\n" +
-            "      <interface component=\"DataUpdate\">\n" +
-            "        <rule active=\"true\" dataset=\"NurseCalls\">\n" +
-            "          <purpose>CREATE TRIGGER | Call</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "      <interface component=\"VMP\">\n" +
-            "        <rule active=\"true\" dataset=\"NurseCalls\">\n" +
-            "          <purpose>SEND PRIMARY | Call | VMP</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "          <settings>{\"destination\":\"test\",\"priority\":\"1\"," +
-            "\"enunciate\":\"ENUNCIATE_ALWAYS\",\"displayValues\":[\"Accept\"]}</settings>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "    </interfaces>\n" +
-            "  </contents>\n" +
-            "</package>";
+        String xmlContent = """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <package version-major="1" version-minor="0">
+              <contents>
+                <datasets>
+                  <dataset active="true">
+                    <name>NurseCalls</name>
+                    <view>
+                      <name>Test_View</name>
+                      <filter relation="in">
+                        <path>alert_type</path>
+                        <value>Call</value>
+                      </filter>
+                    </view>
+                  </dataset>
+                </datasets>
+                <interfaces>
+                  <interface component="DataUpdate">
+                    <rule active="true" dataset="NurseCalls">
+                      <purpose>CREATE TRIGGER | Call</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                    </rule>
+                  </interface>
+                  <interface component="VMP">
+                    <rule active="true" dataset="NurseCalls">
+                      <purpose>SEND PRIMARY | Call | VMP</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                      <settings>{"destination":"test","priority":"1",\
+            "enunciate":"ENUNCIATE_ALWAYS","displayValues":["Accept"]}</settings>
+                    </rule>
+                  </interface>
+                </interfaces>
+              </contents>
+            </package>""";
         
         try (FileWriter writer = new FileWriter(xmlFile)) {
             writer.write(xmlContent);
@@ -129,7 +131,7 @@ class XmlParserSettingsTest {
         List<ExcelParserV5.FlowRow> nurseCalls = parser.getNurseCalls();
         assertEquals(1, nurseCalls.size(), "Should have 1 nurse call row");
         
-        ExcelParserV5.FlowRow flow = nurseCalls.get(0);
+        ExcelParserV5.FlowRow flow = nurseCalls.getFirst();
         
         // Verify enunciation was extracted and normalized
         assertEquals("ENUNCIATE", flow.enunciate,
@@ -141,40 +143,41 @@ class XmlParserSettingsTest {
         File xmlFile = tempDir.resolve("test.xml").toFile();
         
         // Create test XML for Clinicals dataset
-        String xmlContent = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-            "<package version-major=\"1\" version-minor=\"0\">\n" +
-            "  <contents>\n" +
-            "    <datasets>\n" +
-            "      <dataset active=\"true\">\n" +
-            "        <name>Clinicals</name>\n" +
-            "        <view>\n" +
-            "          <name>Test_View</name>\n" +
-            "          <filter relation=\"in\">\n" +
-            "            <path>alert_type</path>\n" +
-            "            <value>APNEA</value>\n" +
-            "          </filter>\n" +
-            "        </view>\n" +
-            "      </dataset>\n" +
-            "    </datasets>\n" +
-            "    <interfaces>\n" +
-            "      <interface component=\"DataUpdate\">\n" +
-            "        <rule active=\"true\" dataset=\"Clinicals\">\n" +
-            "          <purpose>CREATE TRIGGER | APNEA</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "      <interface component=\"VMP\">\n" +
-            "        <rule active=\"true\" dataset=\"Clinicals\">\n" +
-            "          <purpose>SEND PRIMARY | APNEA | VMP</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "          <settings>{\"destination\":\"test\",\"priority\":\"2\"}</settings>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "    </interfaces>\n" +
-            "  </contents>\n" +
-            "</package>";
+        String xmlContent = """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <package version-major="1" version-minor="0">
+              <contents>
+                <datasets>
+                  <dataset active="true">
+                    <name>Clinicals</name>
+                    <view>
+                      <name>Test_View</name>
+                      <filter relation="in">
+                        <path>alert_type</path>
+                        <value>APNEA</value>
+                      </filter>
+                    </view>
+                  </dataset>
+                </datasets>
+                <interfaces>
+                  <interface component="DataUpdate">
+                    <rule active="true" dataset="Clinicals">
+                      <purpose>CREATE TRIGGER | APNEA</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                    </rule>
+                  </interface>
+                  <interface component="VMP">
+                    <rule active="true" dataset="Clinicals">
+                      <purpose>SEND PRIMARY | APNEA | VMP</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                      <settings>{"destination":"test","priority":"2"}</settings>
+                    </rule>
+                  </interface>
+                </interfaces>
+              </contents>
+            </package>""";
         
         try (FileWriter writer = new FileWriter(xmlFile)) {
             writer.write(xmlContent);
@@ -186,7 +189,7 @@ class XmlParserSettingsTest {
         List<ExcelParserV5.FlowRow> clinicals = parser.getClinicals();
         assertEquals(1, clinicals.size(), "Should have 1 clinical row");
         
-        ExcelParserV5.FlowRow flow = clinicals.get(0);
+        ExcelParserV5.FlowRow flow = clinicals.getFirst();
         
         // Verify EMDAN field is set to "Yes" for Clinicals dataset
         assertEquals("Yes", flow.emdan,
@@ -198,40 +201,41 @@ class XmlParserSettingsTest {
         File xmlFile = tempDir.resolve("test.xml").toFile();
         
         // Create test XML for NurseCalls dataset
-        String xmlContent = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-            "<package version-major=\"1\" version-minor=\"0\">\n" +
-            "  <contents>\n" +
-            "    <datasets>\n" +
-            "      <dataset active=\"true\">\n" +
-            "        <name>NurseCalls</name>\n" +
-            "        <view>\n" +
-            "          <name>Test_View</name>\n" +
-            "          <filter relation=\"in\">\n" +
-            "            <path>alert_type</path>\n" +
-            "            <value>Call</value>\n" +
-            "          </filter>\n" +
-            "        </view>\n" +
-            "      </dataset>\n" +
-            "    </datasets>\n" +
-            "    <interfaces>\n" +
-            "      <interface component=\"DataUpdate\">\n" +
-            "        <rule active=\"true\" dataset=\"NurseCalls\">\n" +
-            "          <purpose>CREATE TRIGGER | Call</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "      <interface component=\"VMP\">\n" +
-            "        <rule active=\"true\" dataset=\"NurseCalls\">\n" +
-            "          <purpose>SEND PRIMARY | Call | VMP</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "          <settings>{\"destination\":\"test\",\"priority\":\"1\"}</settings>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "    </interfaces>\n" +
-            "  </contents>\n" +
-            "</package>";
+        String xmlContent = """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <package version-major="1" version-minor="0">
+              <contents>
+                <datasets>
+                  <dataset active="true">
+                    <name>NurseCalls</name>
+                    <view>
+                      <name>Test_View</name>
+                      <filter relation="in">
+                        <path>alert_type</path>
+                        <value>Call</value>
+                      </filter>
+                    </view>
+                  </dataset>
+                </datasets>
+                <interfaces>
+                  <interface component="DataUpdate">
+                    <rule active="true" dataset="NurseCalls">
+                      <purpose>CREATE TRIGGER | Call</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                    </rule>
+                  </interface>
+                  <interface component="VMP">
+                    <rule active="true" dataset="NurseCalls">
+                      <purpose>SEND PRIMARY | Call | VMP</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                      <settings>{"destination":"test","priority":"1"}</settings>
+                    </rule>
+                  </interface>
+                </interfaces>
+              </contents>
+            </package>""";
         
         try (FileWriter writer = new FileWriter(xmlFile)) {
             writer.write(xmlContent);
@@ -243,7 +247,7 @@ class XmlParserSettingsTest {
         List<ExcelParserV5.FlowRow> nurseCalls = parser.getNurseCalls();
         assertEquals(1, nurseCalls.size(), "Should have 1 nurse call row");
         
-        ExcelParserV5.FlowRow flow = nurseCalls.get(0);
+        ExcelParserV5.FlowRow flow = nurseCalls.getFirst();
         
         // Verify EMDAN field is set to "No" for NurseCalls dataset
         assertEquals("No", flow.emdan,
@@ -255,40 +259,41 @@ class XmlParserSettingsTest {
         File xmlFile = tempDir.resolve("test.xml").toFile();
         
         // Create test XML
-        String xmlContent = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-            "<package version-major=\"1\" version-minor=\"0\">\n" +
-            "  <contents>\n" +
-            "    <datasets>\n" +
-            "      <dataset active=\"true\">\n" +
-            "        <name>Clinicals</name>\n" +
-            "        <view>\n" +
-            "          <name>Test_View</name>\n" +
-            "          <filter relation=\"in\">\n" +
-            "            <path>alert_type</path>\n" +
-            "            <value>APNEA</value>\n" +
-            "          </filter>\n" +
-            "        </view>\n" +
-            "      </dataset>\n" +
-            "    </datasets>\n" +
-            "    <interfaces>\n" +
-            "      <interface component=\"DataUpdate\">\n" +
-            "        <rule active=\"true\" dataset=\"Clinicals\">\n" +
-            "          <purpose>CREATE TRIGGER | APNEA</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "      <interface component=\"VMP\">\n" +
-            "        <rule active=\"true\" dataset=\"Clinicals\">\n" +
-            "          <purpose>SEND PRIMARY | APNEA | VMP</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "          <settings>{\"destination\":\"test\",\"priority\":\"2\"}</settings>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "    </interfaces>\n" +
-            "  </contents>\n" +
-            "</package>";
+        String xmlContent = """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <package version-major="1" version-minor="0">
+              <contents>
+                <datasets>
+                  <dataset active="true">
+                    <name>Clinicals</name>
+                    <view>
+                      <name>Test_View</name>
+                      <filter relation="in">
+                        <path>alert_type</path>
+                        <value>APNEA</value>
+                      </filter>
+                    </view>
+                  </dataset>
+                </datasets>
+                <interfaces>
+                  <interface component="DataUpdate">
+                    <rule active="true" dataset="Clinicals">
+                      <purpose>CREATE TRIGGER | APNEA</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                    </rule>
+                  </interface>
+                  <interface component="VMP">
+                    <rule active="true" dataset="Clinicals">
+                      <purpose>SEND PRIMARY | APNEA | VMP</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                      <settings>{"destination":"test","priority":"2"}</settings>
+                    </rule>
+                  </interface>
+                </interfaces>
+              </contents>
+            </package>""";
         
         try (FileWriter writer = new FileWriter(xmlFile)) {
             writer.write(xmlContent);
@@ -300,7 +305,7 @@ class XmlParserSettingsTest {
         List<ExcelParserV5.FlowRow> clinicals = parser.getClinicals();
         assertEquals(1, clinicals.size(), "Should have 1 clinical row");
         
-        ExcelParserV5.FlowRow flow = clinicals.get(0);
+        ExcelParserV5.FlowRow flow = clinicals.getFirst();
         
         // Verify escalateAfter field is set to "1 decline"
         assertEquals("1 decline", flow.escalateAfter,
@@ -312,44 +317,45 @@ class XmlParserSettingsTest {
         File xmlFile = tempDir.resolve("test.xml").toFile();
         
         // Create test XML with responses array structure (from north_western_cdh_test.xml)
-        String xmlContent = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-            "<package version-major=\"1\" version-minor=\"0\">\n" +
-            "  <contents>\n" +
-            "    <datasets>\n" +
-            "      <dataset active=\"true\">\n" +
-            "        <name>NurseCalls</name>\n" +
-            "        <view>\n" +
-            "          <name>Test_View</name>\n" +
-            "          <filter relation=\"in\">\n" +
-            "            <path>alert_type</path>\n" +
-            "            <value>Nurse</value>\n" +
-            "          </filter>\n" +
-            "        </view>\n" +
-            "      </dataset>\n" +
-            "    </datasets>\n" +
-            "    <interfaces>\n" +
-            "      <interface component=\"DataUpdate\">\n" +
-            "        <rule active=\"true\" dataset=\"NurseCalls\">\n" +
-            "          <purpose>CREATE TRIGGER | Nurse</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "      <interface component=\"VMP\">\n" +
-            "        <rule active=\"true\" dataset=\"NurseCalls\">\n" +
-            "          <purpose>SEND PRIMARY | Nurse | VMP</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "          <settings>{\"destination\":\"test\",\"priority\":\"2\",\"ttl\":10," +
-            "\"responseAction\":\"responses.action\",\"responses\":[" +
-            "{\"$$hashKey\":\"00I\",\"displayValue\":\"Acknowledge\",\"storedValue\":\"Accepted\"}," +
-            "{\"displayValue\":\"Escalate\",\"storedValue\":\"Decline Primary\",\"$$hashKey\":\"00S\"}" +
-            "]}</settings>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "    </interfaces>\n" +
-            "  </contents>\n" +
-            "</package>";
+        String xmlContent = """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <package version-major="1" version-minor="0">
+              <contents>
+                <datasets>
+                  <dataset active="true">
+                    <name>NurseCalls</name>
+                    <view>
+                      <name>Test_View</name>
+                      <filter relation="in">
+                        <path>alert_type</path>
+                        <value>Nurse</value>
+                      </filter>
+                    </view>
+                  </dataset>
+                </datasets>
+                <interfaces>
+                  <interface component="DataUpdate">
+                    <rule active="true" dataset="NurseCalls">
+                      <purpose>CREATE TRIGGER | Nurse</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                    </rule>
+                  </interface>
+                  <interface component="VMP">
+                    <rule active="true" dataset="NurseCalls">
+                      <purpose>SEND PRIMARY | Nurse | VMP</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                      <settings>{"destination":"test","priority":"2","ttl":10,\
+            "responseAction":"responses.action","responses":[\
+            {"$$hashKey":"00I","displayValue":"Acknowledge","storedValue":"Accepted"},\
+            {"displayValue":"Escalate","storedValue":"Decline Primary","$$hashKey":"00S"}\
+            ]}</settings>
+                    </rule>
+                  </interface>
+                </interfaces>
+              </contents>
+            </package>""";
         
         try (FileWriter writer = new FileWriter(xmlFile)) {
             writer.write(xmlContent);
@@ -361,7 +367,7 @@ class XmlParserSettingsTest {
         List<ExcelParserV5.FlowRow> nurseCalls = parser.getNurseCalls();
         assertEquals(1, nurseCalls.size(), "Should have 1 nurse call row");
         
-        ExcelParserV5.FlowRow flow = nurseCalls.get(0);
+        ExcelParserV5.FlowRow flow = nurseCalls.getFirst();
         
         // Verify response options were extracted from responses array
         assertEquals("Acknowledge,Escalate", flow.responseOptions,
@@ -373,42 +379,43 @@ class XmlParserSettingsTest {
         File xmlFile = tempDir.resolve("test.xml").toFile();
         
         // Create comprehensive test XML with all fields
-        String xmlContent = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-            "<package version-major=\"1\" version-minor=\"0\">\n" +
-            "  <contents>\n" +
-            "    <datasets>\n" +
-            "      <dataset active=\"true\">\n" +
-            "        <name>Clinicals</name>\n" +
-            "        <view>\n" +
-            "          <name>Test_View</name>\n" +
-            "          <filter relation=\"in\">\n" +
-            "            <path>alert_type</path>\n" +
-            "            <value>APNEA</value>\n" +
-            "          </filter>\n" +
-            "        </view>\n" +
-            "      </dataset>\n" +
-            "    </datasets>\n" +
-            "    <interfaces>\n" +
-            "      <interface component=\"DataUpdate\">\n" +
-            "        <rule active=\"true\" dataset=\"Clinicals\">\n" +
-            "          <purpose>CREATE TRIGGER | APNEA</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "      <interface component=\"VMP\">\n" +
-            "        <rule active=\"true\" dataset=\"Clinicals\">\n" +
-            "          <purpose>SEND PRIMARY | APNEA | VMP</purpose>\n" +
-            "          <trigger-on create=\"true\"/>\n" +
-            "          <condition><view>Test_View</view></condition>\n" +
-            "          <settings>{\"destination\":\"test\",\"priority\":\"0\",\"ttl\":15," +
-            "\"enunciate\":\"SYSTEM_DEFAULT\",\"overrideDND\":true," +
-            "\"displayValues\":[\"Acknowledge\",\"Escalate\"]}</settings>\n" +
-            "        </rule>\n" +
-            "      </interface>\n" +
-            "    </interfaces>\n" +
-            "  </contents>\n" +
-            "</package>";
+        String xmlContent = """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <package version-major="1" version-minor="0">
+              <contents>
+                <datasets>
+                  <dataset active="true">
+                    <name>Clinicals</name>
+                    <view>
+                      <name>Test_View</name>
+                      <filter relation="in">
+                        <path>alert_type</path>
+                        <value>APNEA</value>
+                      </filter>
+                    </view>
+                  </dataset>
+                </datasets>
+                <interfaces>
+                  <interface component="DataUpdate">
+                    <rule active="true" dataset="Clinicals">
+                      <purpose>CREATE TRIGGER | APNEA</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                    </rule>
+                  </interface>
+                  <interface component="VMP">
+                    <rule active="true" dataset="Clinicals">
+                      <purpose>SEND PRIMARY | APNEA | VMP</purpose>
+                      <trigger-on create="true"/>
+                      <condition><view>Test_View</view></condition>
+                      <settings>{"destination":"test","priority":"0","ttl":15,\
+            "enunciate":"SYSTEM_DEFAULT","overrideDND":true,\
+            "displayValues":["Acknowledge","Escalate"]}</settings>
+                    </rule>
+                  </interface>
+                </interfaces>
+              </contents>
+            </package>""";
         
         try (FileWriter writer = new FileWriter(xmlFile)) {
             writer.write(xmlContent);
@@ -420,7 +427,7 @@ class XmlParserSettingsTest {
         List<ExcelParserV5.FlowRow> clinicals = parser.getClinicals();
         assertEquals(1, clinicals.size(), "Should have 1 clinical row");
         
-        ExcelParserV5.FlowRow flow = clinicals.get(0);
+        ExcelParserV5.FlowRow flow = clinicals.getFirst();
         
         // Verify all fields
         assertEquals("Acknowledge,Escalate", flow.responseOptions,
